# representation-theory

./: .gitignore  pyproject.toml
finite_groups/: __init__.py  factory.py  group.py
finite_groups/representations/: __init__.py  characters.py  core.py
tests/: test_characters.py  test_factory.py  test_group.py
