[project]
name = "representation-theory"
version = "0.1.0"
description = "A library for Finite Group Theory and Representation Theory"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "sympy>=1.14.0",
]

[tool.pytest.ini_options]
# . means "look in the current directory" for the finite_groups package
pythonpath = "." 
# -v gives you the nice list of test names instead of dots
# --tb=short makes error messages less cluttered
addopts = "-v --tb=short"
testpaths = ["tests"]
